// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useMediaQuery > should check for matchMedia support 1`] = `
<div>
  false
</div>
`;

exports[`useMediaQuery > should return false for not-matched query 1`] = `
<div>
  false
</div>
`;

exports[`useMediaQuery > should return true for matched query 1`] = `
<div>
  true
</div>
`;
